Deploying application using Docker
